--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/destromas1/create-awesome-package.git"
   },
-  "author": "stalukdar <stalukdar@team.mobile.de>",
+  "author": "destromas1 <shahjada.talukdar@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/destromas1/create-awesome-package/issues"
